html with header to process image.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
     <title>Broadway Design</title>
   </head>
   <body>
-<h1>HI</h1>
+<h1>Broadway Design</h1>
+
+<nav>
+<p>Home</p>
+<p>Process</p>
+<p>Work</p>
+<p>Team</p>
+<p>Contact</p>
+</nav>
+
+<h2>Our Process</h2>
+<img src="./resources/images/identify.svg">
+
   </body>
 </html>
