html to understand.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,19 @@
 </nav>
 
 <h2>Our Process</h2>
-<img src="./resources/images/identify.svg">
 
+<nav>
+<img src="./resources/images/identify.svg">
+<h3>Identify</h3>
+<p>We focus on the most important details.</p>
+</nav>
+
+<nav>
+  <img src="./resources/images/understand.svg">
+  <h3>Understand</h3>
+  <p>We study our projects inside and out.</p>
+  </nav>
+
+  
   </body>
 </html>
