--- a/index.html
+++ b/index.html
@@ -29,6 +29,29 @@
   <p>We study our projects inside and out.</p>
   </nav>
 
-  
+  <nav>
+<img src="./resources/images/execute.svg">
+<h3>Execute</h3>
+<p>We put everything we have into our work.</p>
+</nav>
+
+<h3>Designed In New York</h3>
+
+<nav>
+<h3>Porfolio</h3>
+<p>Coming Soon</p>
+
+<h3>Team</h3>
+<p>We're Hiring!</p>
+
+<h3>Contact</h3>
+<p>Phone: (555)-555-5555</p>
+<p>E-mail: test@example.com</p>
+<p>Twitter: @test</p>
+
+</nav>
+
+
+
   </body>
 </html>
