--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
     <title>Broadway Design</title>
   </head>
   <body>
+    <nav class="main-banner">
 <h1>Broadway Design</h1>
-
-<nav>
-<p>Home</p>
-<p>Process</p>
-<p>Work</p>
-<p>Team</p>
-<p>Contact</p>
+<p class="top-links">Home</p>
+<p class="top-links">Process</p>
+<p class="top-links">Work</p>
+<p class="top-links">Team</p>
+<p class="top-links">Contact</p>
 </nav>
 
 <h2>Our Process</h2>
