--- a/index.html
+++ b/index.html
@@ -7,30 +7,32 @@
   <body>
     <nav class="main-banner">
 <h1>Broadway Design</h1>
-<p class="top-links">Home</p>
-<p class="top-links">Process</p>
-<p class="top-links">Work</p>
-<p class="top-links">Team</p>
-<p class="top-links">Contact</p>
+<p class="top-links"><u>Home</u></p>
+<p class="top-links"><u>Process</u></p>
+<p class="top-links"><u>Work</u></p>
+<p class="top-links"><u>Team</u></p>
+<p class="top-links"><u>Contact</u></p>
 </nav>
+
 
 <h2>Our Process</h2>
 
 <nav>
 <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg"/>
-<h3>Identify</h3>
+
+<h3 class="process-heads">Identify</h3>
 <p>We focus on the most important details.</p>
 </nav>
 
 <nav>
   <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg"/>
-  <h3>Understand</h3>
+  <h3 class="process-heads">Understand</h3>
   <p>We study our projects inside and out.</p>
   </nav>
 
   <nav>
 <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg"/>
-<h3>Execute</h3>
+<h3 class="process-heads">Execute</h3>
 <p>We put everything we have into our work.</p>
 </nav>
 
