--- a/index.html
+++ b/index.html
@@ -21,34 +21,34 @@
 <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg"/>
 
 <h3 class="process-heads">Identify</h3>
-<p>We focus on the most important details.</p>
+<p class="descriptions">We focus on the most important details.</p>
 </nav>
 
 <nav>
   <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg"/>
   <h3 class="process-heads">Understand</h3>
-  <p>We study our projects inside and out.</p>
+  <p class="descriptions">We study our projects inside and out.</p>
   </nav>
 
   <nav>
 <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg"/>
 <h3 class="process-heads">Execute</h3>
-<p>We put everything we have into our work.</p>
+<p class="descriptions">We put everything we have into our work.</p>
 </nav>
 
-<h3>Designed In New York</h3>
+<h3 id="designed">Designed In New York</h3>
 
 <nav>
 <h3>Porfolio</h3>
-<p>Coming Soon</p>
+<p class="descriptions">Coming Soon</p>
 
 <h3>Team</h3>
-<p>We're Hiring!</p>
+<p class="descriptions">We're Hiring!</p>
 
 <h3>Contact</h3>
-<p>Phone: (555)-555-5555</p>
-<p>E-mail: test@example.com</p>
-<p>Twitter: @test</p>
+<p class="descriptions">Phone: (555)-555-5555</p>
+<p class="descriptions">E-mail: test@example.com</p>
+<p class="descriptions">Twitter: @test</p>
 
 </nav>
 
