--- a/index.html
+++ b/index.html
@@ -53,7 +53,11 @@
 </nav>
 
 <nav>
-  <p>©Broadway 2016 Home About Work Team Contact</p>
+  <div id="bottom-line">
+    <span id="broadway">©Broadway 2016</span>
+    <span id="home"><u>Home</u> <u>About</u> <u>Work</u> <u>Team</u> <u>Contact</u></span>
+    </div>
+
   </nav>
 
   </body>
